--- a/src/Web/KPIWeb/Pages/Home/Index.cshtml
+++ b/src/Web/KPIWeb/Pages/Home/Index.cshtml
@@ -19,13 +19,7 @@
 
                 <div class="empty-state">
 
-                    @* <figure>
-                            <svg aria-label="User Icon">
-                                <use href="#user"></use>
-                            </svg>
-                        </figure>*@
-
-                    <partial name="_KPIThemes" model=@Model.KpiViewModel  />
+                    <partial name="_KPIThemes" model=@Model.ThemesViewmodel  />
 
                 </div>
 
